Bug 65479 - [GM45 SNA Xv] VLC Xv output fails since 2.21.8
Summary: [GM45 SNA Xv] VLC Xv output fails since 2.21.8
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-06 19:49 UTC by Edward Sheldrake
Modified: 2013-06-06 20:43 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Edward Sheldrake 2013-06-06 19:49:50 UTC
Under SNA, VLC fails to initialise its xcb-xv video output module, I think since xf86-video-intel >= 2.21.8. I didn't notice earlier, I usually use mplayer.

Regression from commit 195a51353c3af7bd253227da5f759f06cea01f73 ?

part of xvinfo output under UXA:
supported visuals:
      depth 24, visualID 0x21

corresponding part of xvinfo output using SNA:
supported visuals:
      depth 15, visualID 0x 4
      depth 16, visualID 0x 4
      depth 24, visualID 0x 4

0x4 is not a valid visual ID.

I think the problem is XF86VideoFormatRec contained a visual class, but XvFormatRec should contain a visual ID. xf86-video-intel under SNA is returning a visual class instead of the visual ID, which VLC tries to use, and fails.
Comment 1 Chris Wilson 2013-06-06 20:13:43 UTC
Drat, my testing is with mplayer as well as I find that more convenient to switch between backends. Thanks for the bug report, will dig into how to fixup the structure to return the right visual.
Comment 2 Chris Wilson 2013-06-06 20:43:19 UTC
commit 7e1e18aca214a8705270972131a1800c81bc3b4d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Jun 6 21:40:30 2013 +0100

    sna/video: Fixup formats to select visuals
    
    Fixes regression from
    commit 195a51353c3af7bd253227da5f759f06cea01f73 [2.21.8]
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Tue Apr 9 19:13:46 2013 +0100
    
        sna/video: Convert to a pure Xv backend
    
    Reported-by: Edward Sheldrake <ejsheldrake@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=65479
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.