src/sna/sna_video_textured.c
@@ -38,8 +38,8 @@
 
 static Atom xvBrightness, xvContrast, xvSyncToVblank;
 
-static const XvFormatRec Formats[] = {
-	{15, TrueColor}, {16, TrueColor}, {24, TrueColor}
+static XvFormatRec Formats[] = {
+	{15}, {16}, {24}
 };
 
 static const XvAttributeRec Attributes[] = {
@@ -367,8 +367,9 @@ void sna_video_textured_setup(struct sna *sna, ScreenPtr screen)
 	adaptor->pEncodings[0].height = sna->render.max_3d_size;
 	adaptor->pEncodings[0].rate.numerator = 1;
 	adaptor->pEncodings[0].rate.denominator = 1;
-	adaptor->nFormats = ARRAY_SIZE(Formats);
 	adaptor->pFormats = Formats;
+	adaptor->nFormats = sna_xv_fixup_formats(screen, Formats,
+						 ARRAY_SIZE(Formats));
 	adaptor->nAttributes = ARRAY_SIZE(Attributes);
 	adaptor->pAttributes = Attributes;
 	adaptor->nImages = ARRAY_SIZE(Images);
